<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical" >

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="@dimen/titleback_height"
        android:background="@color/bgtitle"
        android:orientation="horizontal"
        android:paddingLeft="@dimen/titilepad"
        android:paddingRight="@dimen/titilepad" >

        <LinearLayout
            android:id="@+id/titleback_linear_back"
            android:layout_width="60dp"
            android:layout_height="48dp"
            android:layout_marginLeft="@dimen/margin_left"
            android:gravity="center_vertical" >

            <ImageView
                android:id="@+id/titleback_image_back"
                android:layout_width="22dp"
                android:layout_height="28dp"
                android:background="@drawable/back" />
        </LinearLayout>

        <TextView
            android:id="@+id/titleback_text_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:singleLine="true"
            android:textColor="@color/white"
            android:textSize="20sp" />

        <ImageView
            android:id="@+id/add"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="11dp"
            android:src="@drawable/delete_add_0"
            android:visibility="invisible" />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:layout_marginTop="30dp"
        android:background="#e5e4e4"
        android:clickable="false"
        android:orientation="horizontal" >

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginLeft="16dp"
            android:layout_weight="1"
            android:orientation="horizontal" >

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1.5" >

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:text="@string/terminal_id"
                    android:textColor="#292929"
                    android:textSize="15sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1" >

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:text="@string/postype"
                    android:textColor="#292929"
                    android:textSize="15sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1" >

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:text="@string/paychannel"
                    android:textColor="#292929"
                    android:textSize="15sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1" >

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:text="@string/openstate"
                    android:textColor="#292929"
                    android:textSize="15sp" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginRight="16dp"
            android:layout_weight="1"
            android:visibility="invisible" >
        </LinearLayout>
    </LinearLayout>

    <com.example.zf_pad.util.XListView
        android:id="@+id/terminal_list"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:divider="@color/F3F2F2"
        android:dividerHeight="2dp"
        android:scrollbars="none" />

</LinearLayout>